infra/k8s/client-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-sync-client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meet-sync-client
  template:
    metadata:
      labels:
        app: meet-sync-client
    spec:
      containers:
      - name: meet-sync-client
        image: vinayakbhat430learn/calendly-client
        resources:
          limits:
            memory: "4096Mi"
            cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: meet-sync-client-srv
spec:
  selector:
    app: meet-sync-client
  ports:
  - name: meet-sync-client
    protocol: TCP
    port: 4200
    targetPort: 4200
